force-app/main/default/objects/Projet__c/fields/Project_cost__c.field-meta.xml
<CustomField>
    <fullName>Project_cost__c</fullName>
    <label>Project cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>