force-app/main/default/objects/Projet__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>When the project Start</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>