force-app/main/default/objects/Projet__c/listViews/Projet_Stated.listView-meta.xml
<ListView>
    <fullName>Projet_Stated</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Projet Stated</label>
</ListView>